search-bar-added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
   </header>
   <!-- main container  -->
   <main class="container">
-    <!-- section container -->
+    <section>
+      <div class="mb-3 w-50">
+        <input id="search-field" type="search" class="form-control" id="exampleFormControlInput1" placeholder="Srarch your phone">
+        <button id="btn-search" class="btn btn-primary">Srarch</button>
+      </div>
+    </section>
+    <!-- Display search result -->
     <section>
       <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
+      </div>
+      <div>
+        <h3 class="text-warning">No phone Found</h3>
       </div>
     </section>
   </main>
