--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section>
       <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
       </div>
-      <div>
+      <div id="no-found-message" class="mt-4 d-none">
         <h3 class="text-warning">No phone Found</h3>
       </div>
     </section>
