--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
       <div id="no-found-message" class="mt-4 d-none">
         <h3 class="text-warning">No phone Found</h3>
       </div>
+      <div>
+        .btn 
+      </div>
+    </section>
+    <!-- loader -->
+    <section id="loader" class="d-none">
+      <div style="height: 400px" class="d-flex justify-content-center align-items-center">
+        <div class="spinner-border text-success" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
     </section>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
