--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="no-found-message" class="mt-4 d-none">
         <h3 class="text-warning">No phone Found</h3>
       </div>
-      <div class="text-center d-none">
+      <div id="show-all" class="text-center d-none">
         <div class="btn btn-primary">Show All</div>
       </div>
     </section>
