--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3 class="text-warning">No phone Found</h3>
       </div>
       <div id="show-all" class="text-center d-none">
-        <div class="btn btn-primary">Show All</div>
+        <div id="btn-show-all" class="btn btn-primary">Show All</div>
       </div>
     </section>
     <!-- loader -->
